[metadata]
name = AsyncSpawner
version = 1.0.0
author = Konstantin Tolstikhin
author_email = k.tolstikhin@gmail.com
description = Spawn asyncio coroutines over threads running in multiple processes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ktolstikhin/asyncspawner
project_urls =
    Bug Tracker = https://github.com/ktolstikhin/asyncspawner/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
